# page_crawler_v2

./: .gitignore  DEPLOYMENT_GUIDE.md  Dockerfile  company_extraction_results_20250605_100425.json  company_extractor_agent.py  config.py  crawler_database.db  database.py  deploy_setup.py  packages.txt  page_crawler_service.py  pyproject.toml  requirements.txt  requirements_deploy.txt  sector_validator.py  streamlit_app.py  streamlit_app_fixed.py  web_crawler.py
.devcontainer/: devcontainer.json
public/: sectors.csv
src/: auth.py  config.py  database.py  main_app.py  page_crawler_service.py  sector_search_tool.py  sector_validator.py  web_crawler.py
