[project]
name = "page-crawler-v2"
version = "0.1.0"
description = "A Streamlit app for crawling web pages and extracting company info."
requires-python = ">=3.10"
dependencies = [
    "agno>=1.7.0",
    "streamlit>=1.30.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "openai>=1.35.0",
    "pydantic>=2.5.0",
    "validators>=0.22.0",
    "lxml>=4.9.3",
    "aiohttp>=3.9.0",
    "nest-asyncio>=1.5.8",
    "plotly>=5.17.0",
    "pandas>=2.2.0",
    "python-dotenv>=1.0.0",
    "uvicorn",
    "playwright"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
